# dataprocessor

./: .gitignore  LICENSE  README.md  pyproject.toml  utils.py
src/: __init__.py
src/dataprocessor/: constants.py  data_processor.py  feed_filter.py  utils.py
src/example/: example.py
tests/: test_data_processor.py
